@@ -1,4 +1,10 @@
-$Id: Changelog.txt,v 1.23 2010/05/21 08:22:05 nanard Exp $
+$Id: Changelog.txt,v 1.25 2011/01/03 17:31:03 nanard Exp $
+
+2011/01/03:
+  Added an argument to initnatpmp() in order to force the gateway to be used
+
+2011/01/01:
+  fix in make install
 
 2010/05/21:
   make install now working under MacOSX (and BSD)
